# hermes-omnigent-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: governance.md
examples/hermes-agent/: config.yaml
scripts/: register_harness.py
src/hermes_omnigent_harness/: __init__.py  _event_bridge.py  _hermes_omnigent_register.pth  _register.py  hermes_executor.py  hermes_harness.py
tests/: conftest.py  test_event_bridge.py  test_executor.py  test_integration.py
