[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-omnigent-harness"
version = "0.1.0"
description = "Custom Omnigent harness adapter that wraps Hermes agent sessions — live session sharing, mobile access, and governance for Hermes"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Brian O'Connell" }]
dependencies = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
