[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-omnigent-harness"
version = "0.2.0"
description = "Custom Omnigent harness adapter that wraps Hermes agent sessions — live session sharing, mobile access, and governance for Hermes"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Brian O'Connell" }]
keywords = ["omnigent", "hermes", "harness", "agent", "ai", "meta-harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/brianoconnell/hermes-omnigent-harness"
Repository = "https://github.com/brianoconnell/hermes-omnigent-harness"
Issues = "https://github.com/brianoconnell/hermes-omnigent-harness/issues"

[project.scripts]
hermes-register = "hermes_omnigent_harness._register:main"

[project.entry-points."omnigent.harnesses"]
hermes = "hermes_omnigent_harness.hermes_harness"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_omnigent_harness = ["*.pth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
